--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CS4241-B16 Homework Assignment 1</title>
+    <title>CS4241-B16 Homework Assignment 2</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Author: Nathaniel Jefferson -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -10,47 +11,81 @@
   <body>
     <div id="wrapper"  class="container">
       <div id="header">
-	    <h1>Nathaniel Jefferson Class of 2017</h1>
+        <div class="jumbotron">
+	      <h1 class="col-md-5">Nathaniel Jefferson Class of 2017</h1>
+          <h3 class="col-md-8">Robotics Engineering and Computer Science</h3>
+        </div>
       </div>
-      <div id="content">
-	    <h2>Major:</h2>
-	    <p>
-		Robotics Engineering and Computer Science
-	    </p>
-	    <hr/>
-	    <h2>Previous Courses:</h2>
-		<ul>
-		  <li>CS 2223 ALGORITHMS</li>
-		  <li>CS 2303 SYSTEMS PROGRAMMING CONCEPTS</li>
-		  <li>CS 4233 OBJ-ORIENTED ANALYSIS & DESIGN</li>
-		  <li>CS 4401 SOFTWARE SECURITY ENGINEERING</li>
-		  <li>CS 1000 COMPUTER SCIENCE ELECTIVE</li>
-		  <li>CS 2022 DISCRETE MATHEMATICS</li>
-		  <li>CS 2102 OBJCT-ORIENTED DESIGN CONCEPTS</li>
-		  <li>CS 3733 SOFTWARE ENGINEERING</li>
-		  <li>CS 1102 ACCELERTD INTRO TO PROGR DESGN</li>
-		  <li>CS 3013 OPERATING SYSTEMS</li>
-		</ul>
-	    <hr/>
-	    <h2>Experience</h2>
-		<ul>
-		  <li>HTML: a lot</li>
-		  <li>CSS: a lot</li>
-		  <li>Java: a lot</li>
-		  <li>Javascript: some</li>
-		  <li>Ruby: none</li>
-		  <li>Python: a lot</li>
-		  <li>Unit Testing: some</li>
-		</ul>
-	    <hr/>
-      </div>
+      <div id="content" class="container">
+          <div class="col-md-4">
+              <div class="info">
+                <h2>Previous Courses:</h2>
+                <ul>
+                  <li>CS 2223 ALGORITHMS</li>
+                  <li>CS 2303 SYSTEMS PROGRAMMING CONCEPTS</li>
+                  <li>CS 4233 OBJ-ORIENTED ANALYSIS & DESIGN</li>
+                  <li>CS 4401 SOFTWARE SECURITY ENGINEERING</li>
+                  <li>CS 1000 COMPUTER SCIENCE ELECTIVE</li>
+                  <li>CS 2022 DISCRETE MATHEMATICS</li>
+                  <li>CS 2102 OBJCT-ORIENTED DESIGN CONCEPTS</li>
+                  <li>CS 3733 SOFTWARE ENGINEERING</li>
+                  <li>CS 1102 ACCELERTD INTRO TO PROGR DESGN</li>
+                  <li>CS 3013 OPERATING SYSTEMS</li>
+                </ul>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="info">
+                <h2>Experience</h2>
+                <ul>
+                  <li>HTML: a lot</li>
+                  <li>CSS: a lot</li>
+                  <li>Java: a lot</li>
+                  <li>Javascript: some</li>
+                  <li>Ruby: none</li>
+                  <li>Python: a lot</li>
+                  <li>Unit Testing: some</li>
+                </ul>
+            </div>
+        </div>
+          <div class="col-md-4">
+              <div class="info">
+                <h2>Work Experience</h2>
+                <ul>
+                  <li>ID Tech</li>
+                  <li>Addecco</li>
+                  <li>WPI</li>
+                </ul>
+            </div>
+        </div>
+            <div class="container">
+              <table class="table table-hover">
+                <tr>
+                   <th>Month</th>
+                   <th>Savings</th>
+                </tr>
+                <tr>
+                   <td>January</td>
+                   <td>$100</td>
+                </tr>
+                <tr>
+                   <td>Febuary</td>
+                   <td>$200</td>
+                </tr>
+             </table> 
+            </div>
+            <div class="container">
+                <ul class="list-group">
+                  <li class="list-group-item">Cras justo odio</li>
+                  <li class="list-group-item">Morbi leo risus</li>
+                  <li class="list-group-item">Porta ac consectetur ac</li>
+                  <li class="list-group-item">Vestibulum at eros</li>
+                 </ul>
+             </div>
+             <div>
+                 <a href="http://www.dragonballz.com">Kamehameha</a>
+             </div>
       <div id="footer">
-	    <h2>Work Experience</h2>
-	    <ul>
-	      <li>ID Tech</li>
-	      <li>Addecco</li>
-	      <li>WPI</li>
-	    </ul>
       </div>
     </div>
   </body>
