--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
           <div class="col-md-4">
               <div class="info">
-                <h2>Experience</h2>
+                <h2>Experience:</h2>
                 <ul>
                   <li>HTML: a lot</li>
                   <li>CSS: a lot</li>
@@ -50,7 +50,7 @@
         </div>
           <div class="col-md-4">
               <div class="info">
-                <h2>Work Experience</h2>
+                <h2>Work Experience:</h2>
                 <ul>
                   <li>ID Tech</li>
                   <li>Addecco</li>
@@ -58,7 +58,7 @@
                 </ul>
             </div>
         </div>
-            <div class="container">
+            <div class="container col-md-4">
               <table class="table table-hover">
                 <tr>
                    <th>Month</th>
@@ -72,18 +72,22 @@
                    <td>Febuary</td>
                    <td>$200</td>
                 </tr>
+                <tr>
+                   <td>March</td>
+                   <td>$300</td>
+                </tr>
              </table> 
             </div>
-            <div class="container">
+             <div>
+                 <a href="http://www.dragonballz.com">Kamehameha</a>
+             </div>
+            <div class="container col-md-6">
                 <ul class="list-group">
                   <li class="list-group-item">Cras justo odio</li>
                   <li class="list-group-item">Morbi leo risus</li>
                   <li class="list-group-item">Porta ac consectetur ac</li>
                   <li class="list-group-item">Vestibulum at eros</li>
                  </ul>
-             </div>
-             <div>
-                 <a href="http://www.dragonballz.com">Kamehameha</a>
              </div>
       <div id="footer">
       </div>
