--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- Author: Nathaniel Jefferson -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+    <script src="https://use.fontawesome.com/53cba9084c.js"></script>
   </head>
   <body>
     <div id="wrapper"  class="container">
@@ -58,7 +60,7 @@
                 </ul>
             </div>
         </div>
-            <div class="container col-md-4">
+            <div class="container col-md-8">
               <table class="table table-hover">
                 <tr>
                    <th>Month</th>
@@ -78,16 +80,9 @@
                 </tr>
              </table> 
             </div>
-             <div>
-                 <a href="http://www.dragonballz.com">Kamehameha</a>
-             </div>
-            <div class="container col-md-6">
-                <ul class="list-group">
-                  <li class="list-group-item">Cras justo odio</li>
-                  <li class="list-group-item">Morbi leo risus</li>
-                  <li class="list-group-item">Porta ac consectetur ac</li>
-                  <li class="list-group-item">Vestibulum at eros</li>
-                 </ul>
+             <div class="bye" >
+                 <a href="https://www.reddit.com/r/dragonball/"><span style="font-size:6rem;"><i class="fa fa-reddit-alien" aria-hidden="true"></i></span>
+                     Kamehameha</a>
              </div>
       <div id="footer">
       </div>
