--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Author: Nathaniel Jefferson -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Shadows+Into+Light+Two|Shrikhand" rel="stylesheet">
     <script src="https://use.fontawesome.com/53cba9084c.js"></script>
   </head>
   <body>
